syntax = "proto3";

package grpc.health.v1;

option java_package = "co.ledger.protobuf.lama.common";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

message Empty {}

message VersionResponse {
  string version = 1;
  string sha1 = 2;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);

  rpc Version(Empty) returns (VersionResponse);
}
